# Federated-Learning-with-an-Adversary

./: .gitignore  .pdm-python  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.zed/: settings.json
project/: evaluate.ipynb  main.ipynb  main.py  requirements.txt  run_multiple_experiments.ipynb  run_single_experiment.ipynb  setup.py  training.py  utilities.py
project/attacks/: __init__.py  gradient_attack.py  weight_attack.py
project/federated/: server.py
project/plots/: server-accuracy-10-0.001-non-iid.eps  server-accuracy-10-0.001.eps  server-accuracy-10-0.01-non-iid.eps  server-accuracy-10-0.01.eps  server-accuracy-10-0.1-non-iid.eps  server-accuracy-10-0.1.eps  server-accuracy-10-1.0-non-iid.eps  server-accuracy-10-1.0.eps  server-accuracy-10-10.0-non-iid.eps  server-accuracy-10-10.0.eps  server-accuracy-2-0.001-non-iid.eps  server-accuracy-2-0.001.eps  server-accuracy-2-0.01-non-iid.eps  server-accuracy-2-0.01.eps  server-accuracy-2-0.1-non-iid.eps  server-accuracy-2-0.1.eps  server-accuracy-2-1.0-non-iid.eps  server-accuracy-2-1.0.eps  server-accuracy-2-10.0-non-iid.eps  server-accuracy-2-10.0.eps  server-accuracy-5-0.001-non-iid.eps  server-accuracy-5-0.001.eps  server-accuracy-5-0.01-non-iid.eps  server-accuracy-5-0.01.eps  server-accuracy-5-0.1-non-iid.eps  server-accuracy-5-0.1.eps  server-accuracy-5-1.0-non-iid.eps  server-accuracy-5-1.0.eps  server-accuracy-5-10.0-non-iid.eps  server-accuracy-5-10.0.eps  server-accuracy-base-case-non-iid.eps  server-accuracy-base-case.eps
src/federated/: evaluate.ipynb  main.py  run_single_experiment.ipynb  (+4 more)
(+925 files in other folders)
